tests/paczka1/small_fuzzy/36089924.err
Error in line 8: Zdy91uiUg S866 60,8
Error in line 7: xtxzk8eQf S932 94,5
Error in line 14: xtxzk8eQf S866 70,0
